# scrabble

./: .clang-format  .gitignore  .gitmodules  .syntastic_c_config  .syntastic_cpp_config  CMakeLists.txt  Makefile  README.md  driver.c  en_US.dic  general.h  input.c  input.h  letter_bag_type.c  letter_bag_type.h  letter_frequency.c  letter_frequency.h  main.c  move.h  rail_type.c  rail_type.h  rule_checker.c  rule_checker.h  scorer.c  scorer.h  state_type.c  state_type.h  tile_drawer.c  tile_drawer.h  trie.c  trie.h  unit_test.txt  words_in_dictionary_file.py
cicero/: CMakeLists.txt
cicero/include/: cicero.h
cicero/include/cicero/: cicero.h
cicero/src/: cicero_tables.h  cicero_types.h  init.c  legal.c  movegen.c  rack.c  score.c
cmake/: CompilerWarnings.cmake  FindGTK3.cmake
dicts/: get_twl06.sh  words.txt
example-games/: NOTES.txt  anno12014.gcg  anno12538.gcg  anno24984.gcg  anno25072.gcg  anno31970.gcg  anno32194.gcg  anno32196.gcg  anno32521.gcg  anno32613.gcg  anno32645.gcg  anno34684.gcg  anno35418.gcg  anno35566.gcg  anno35571.gcg  anno35580.gcg  cf589-whatnoloan-apr20.txt  cruella-cf589-08feb16.txt  insidious-cf589-apr20.txt  insidious-cf589-feb20.txt  squush-whatnoloan-apr20.txt  whatnoloan-BingoAce17-jan17.txt  whatnoloan-squush-apr20.txt
example-games/fails/: NOTES.txt  anno12426.gcg  anno26192.gcg  anno32614.gcg  anno33076.gcg
example-games/positions/: deenap50_1.txt  deenap50_2.txt  example1.txt  kristen_c_1.txt  kristen_c_2.txt  kristen_c_2_1.txt  kristen_c_2_2.txt  kristen_c_2_3.txt  kristen_c_2_4.txt  kristen_c_2_5.txt  kristen_c_2_6.txt  kristen_c_2_7.txt  kristen_c_2_8.txt  kristen_c_2_9.txt  kristen_c_3.txt  kristen_c_4.txt  kristen_c_5.txt  natalie_p_2.txt  natalie_p_3.txt  natalie_p_4.txt  natalie_p_5.txt  natalie_p_6.txt  natalie_p_7.txt
example-games/words_with_friends/: mygame.txt
mafsa/: CMakeLists.txt
mafsa/include/mafsa/: mafsa.h
mafsa/src/: buildmafsa.c  iconv.h  mafsa.c
schemas/: gen.sh  mafsa.fbs
src/: CMakeLists.txt  buildmafsa.c  driver.cpp  gcg.cpp  gcg.h  iconv.h  mafsa++.cpp  mafsa++.h  mafsa.c  mafsa.cpp  mafsa.h  mafsa_generated.h  makedawg.cpp  notes.txt  rack.cpp  rack.h  scrabble.cpp  scrabble.h  scratch  square.cpp  square.h  tables.h
tests/: CMakeLists.txt  find_best_move.cpp  game_replay_test.cpp  gcg.test.cpp  integration_test.cpp  legality.test.cpp  mafsa.test.cpp  movegen.test.cpp  recalc.test.cpp  score.test.cpp  square.test.cpp  test_data.h  test_helpers.h
tools/: gen.sh  make_dictionary.cpp  mk_tables.py
ui/: CMakeLists.txt  datrie.cpp  engine.cpp  engine.h  engine_test.cpp  game-test.cpp  game.cpp  game.h  game.test.cpp  gen.py  main.bak.cpp  main.cpp  tables.h  text-game.cpp  wwf-ui.cpp
